fixed alignement adn added sort function to utility

--- a/nuxtapp/assets/css/global.css
+++ b/nuxtapp/assets/css/global.css
@@ -1,13 +1,13 @@
 .table-header {
-  @apply px-1 py-1 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+  @apply px-px py-1 text-left text-xs font-medium text-gray-500 uppercase;
 }
 
 .table-col {
-  @apply px-1 py-1 whitespace-nowrap overflow-hidden overflow-ellipsis text-xs text-gray-500;
+  @apply px-px py-1 whitespace-nowrap overflow-hidden overflow-ellipsis text-xs text-gray-500;
 }
 
 .table-col-primary {
-  @apply px-1 py-1 whitespace-nowrap overflow-hidden overflow-ellipsis text-xs font-medium text-gray-900;
+  @apply px-px py-1 whitespace-nowrap overflow-hidden overflow-ellipsis text-xs font-medium text-gray-900;
 }
 
 .table-col.xs,
